[tool.poetry]
name = "api_login"
version = "0.1.0"
description = ""
authors = ["Catrofe <lord.rico10@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.73.0"
uvicorn = "^0.17.4"
pydantic = "^1.9.0"
psycopg2 = "^2.9.3"
bcrypt = "^3.2.0"
SQLAlchemy = "^1.4.31"
SQLAlchemy-Utils = "^0.38.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
isort = "^5.10.1"
black = "^22.1.0"
flake8 = "^4.0.1"
pre-commit = "^2.17.0"
mypy = "^0.931"
sqlalchemy-stubs = "^0.4"
pytest-random-order = "^1.0.4"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "--random-order",
  "--cov=app",
  "--cov-report=term-missing"
]
